name:          yesod-hunt
version:       0.1
license:       MIT
license-file:  LICENSE
author:
copyright:
maintainer:
stability:     experimental
category:
synopsis:      A Yesod Plugin, Subsite to integrate search framework Holumbus within Yesod applications
cabal-version: >=1.8
build-type:    Simple
-- tested-with:   ghc-7.0.3

-- extra-source-files:
--     README


executable  hunt-yesod-server
  main-is:      main.hs
  other-modules:
  hs-source-dirs: test


  build-depends: base                   >= 4   && < 5
               , aeson                  >= 0.6
               , yesod                  >= 1.2
               , text
               , yesod-hunt
               , shakespeare-js         >= 1.2



library
  build-depends: base                   >= 4   && < 5
               , aeson                  >= 0.6
               , yesod                  >= 1.2
               , hunt-searchengine      >= 0.1
               , text

  exposed-modules:
    Yesod.Hunt.SubSite
    Yesod.Hunt.Routes
    Yesod.Hunt
  hs-source-dirs: src

  ghc-options: -Wall -funbox-strict-fields -fwarn-tabs

  extensions: MultiParamTypeClasses
              FlexibleContexts
              FlexibleInstances
              OverloadedStrings
              TypeFamilies
              ConstraintKinds
              KindSignatures
              TemplateHaskell
              QuasiQuotes
              RankNTypes
